feat: add awards page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,7 @@
       </a>
       <div class="inline-flex gap-2">
         <a href="/blog">Blog</a>
+        <a href="/awards">Awards</a>
         <a href="javascript:void(0)">Tools</a>
         <a href="/about">About</a>
       </div>
