--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,3 +43,13 @@
     height: 100%;
   }
 </style>
+
+<style is:global>
+  @font-face {
+    font-family: 'Knewave';
+    src: url('/fonts/Knewave-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+</style>
